--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
     "mongodb": "^6.17.0"
   }
 }
